--- a/locale/en-US/options.dtd
+++ b/locale/en-US/options.dtd
@@ -15,6 +15,8 @@
 <!ENTITY popupstyleicontext "icon &amp; text">
 <!ENTITY popupstyleicon "icon only">
 <!ENTITY popupstyleipr "icons per row">
+<!ENTITY popupstyleiconsize "icon size">
+<!ENTITY popupstyleiconsizetooltip "icon width/height in pixels">
 <!ENTITY setmbb "Set mouse button behavior">
 <!ENTITY setmbbl "Left button">
 <!ENTITY setmbbm "Middle button">
